# WeatherHttpClient

./: CMakeLists.txt
src/headers/: Application.hpp  Client.hpp
src/sources/: Application.cpp  Client.cpp  main.cpp
